Revised all-screen

--- a/chats.html
+++ b/chats.html
@@ -41,22 +41,73 @@
       </div>
     </header>
 
-    <main class="main-screen">
-      <div class="user-component">
+    <div class="main-screen">
+      <div class="user-component info-component">
         <div class="user-component__column">
           <img src="avatar.jpeg" class="user-component__avatar" />
           <div class="user-component__text">
-            <h4 class="user-component__title">Ponyo</h4>
-            <h6 class="user-component__subtitle">
-              Please check My Kokao Account Info
-            </h6>
+            <h4 class="user-component__title">Information</h4>
+            <h6 class="user-component__subtitle">Please check Info</h6>
           </div>
         </div>
         <div class="user-component__column">
-          <span class="user-component__time">21:22</span>
-          <div class="badge">1</div>
+          <button>Click</button>
         </div>
       </div>
+    </div>
+
+    <main class="main-screen">
+      <a href="chat-screen.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img src="avatar.jpeg" class="user-component__avatar" />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Ponyo</h4>
+              <h6 class="user-component__subtitle">
+                Please check My Kokao Account Info
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">05:31</span>
+            <div class="badge">1</div>
+          </div>
+        </div>
+      </a>
+      <a href="chat-screen.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img src="avatar.jpeg" class="user-component__avatar" />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Kaonashi</h4>
+              <h6 class="user-component__subtitle">
+                Please check My Kokao Account Info
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">05:31</span>
+            <div class="badge">1</div>
+          </div>
+        </div>
+      </a>
+      <a href="chat-screen.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img src="avatar.jpeg" class="user-component__avatar" />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Kiki</h4>
+              <h6 class="user-component__subtitle">
+                Please check My Kokao Account Info
+              </h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <span class="user-component__time">05:31</span>
+            <div class="badge">1</div>
+          </div>
+        </div>
+      </a>
     </main>
 
     <nav class="nav">
@@ -85,6 +136,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big </span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/c4bc47d755.js"
