--- a/find.html
+++ b/find.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Find-</title>
+    <title>Shopping-</title>
   </head>
-  <body>
+  <body id="find-screen">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -24,7 +24,7 @@
     </div>
 
     <header class="screen-header">
-      <h1 class="screen-header__title">Find</h1>
+      <h1 class="screen-header__title">Shopping</h1>
       <div class="screen-header__icons">
         <span>
           <i class="fa-solid fa-magnifying-glass fa-lg"></i>
@@ -36,51 +36,36 @@
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen find-screen">
       <div class="find-icons">
         <div class="find-icons__icon">
-          <i class="fa-solid fa-qrcode"></i>
-          <span>QR Code</span>
+          <i class="fa-solid fa-gift"></i>
+          <span>Gift</span>
         </div>
         <div class="find-icons__icon">
-          <i class="fa-solid fa-address-book"></i>
-          <span>Add by Contacts</span>
+          <i class="fa-solid fa-store"></i>
+          <span>Shop</span>
         </div>
         <div class="find-icons__icon">
-          <i class="fa-solid fa-fingerprint"></i>
-          <span>Add by ID</span>
+          <i class="fa-solid fa-face-laugh-squint"></i>
+          <span>Emoticons</span>
         </div>
         <div class="find-icons__icon">
-          <i class="fa-solid fa-envelope"></i>
-          <span>Invite</span>
+          <i class="fa-solid fa-film"></i>
+          <span>DVD</span>
         </div>
       </div>
-      <div class="recommended-friends">
-        <div class="recommended-friends__title">
-          <h6>Recommended Friends</h6>
-        </div>
-        <div class="recommended-friends__text">
-          <span>You have no recommended friends.</span>
-        </div>
-      </div>
+
       <div class="open-chat">
-        <div class="open-chat__header">
-          <h4 class="open-chat__title">Open Chat</h4>
-          <span>
-            Go to OpenChat Home
-            <i class="fa-solid fa-angle-right"></i>
-          </span>
-        </div>
         <div class="open-post">
           <div class="open-post__column">
             <div>
-              <h5 class="open-post__title">#PONYO</h5>
+              <h5 class="open-post__title">Ghibli Museum</h5>
               <h6 class="open-post__hashtags">#ponyo #ghibli #sousuke</h6>
               <div class="open-post__members">
-                <img src="avatar.jpeg" />
-                <span class="open-post__members--count">802 members</span>
-                <div class="divider"></div>
-                <span class="open-post__members--status">Active</span>
+                <span class="open-post__members--status">
+                  2021.07.01 ~ 2021.07.31
+                </span>
               </div>
             </div>
           </div>
@@ -94,28 +79,64 @@
             </div>
           </div>
         </div>
+      </div>
 
-        <div class="open-post">
-          <div class="open-post__column">
-            <div>
-              <h5 class="open-post__title">#PONYO Fan</h5>
-              <h6 class="open-post__hashtags">#ponyo #ghibli #sousuke</h6>
-              <div class="open-post__members">
-                <img src="avatar.jpeg" />
-                <span class="open-post__members--count">299 members</span>
-                <div class="divider"></div>
-                <span class="open-post__members--status">Active</span>
-              </div>
-            </div>
+      <div class="user-shopping">
+        <div class="user-shopping__list">
+          <img src="avatar.jpeg" />
+          <span>Dust's shopping</span>
+          <i class="fa-solid fa-angle-right fa-xs"></i>
+        </div>
+        <div class="user-shopping__text">
+          <span>Recent Order</span>
+          <div class="divider"></div>
+          <span>Cart</span>
+        </div>
+      </div>
+
+      <div class="shopping-search">
+        <div class="search-component">
+          <div class="search-component__icon">
+            <i class="fa-solid fa-magnifying-glass fa-lg"></i>
           </div>
-          <div class="open-post__column">
-            <div class="open-post__photo">
-              <img src="avatar.jpeg" />
-              <div class="open-post__heart-count heart">
-                <i class="fa-solid fa-heart fa-xs"></i>
-                <span>215</span>
-              </div>
-            </div>
+          <div class="search-component__box">
+            <input type="text" placeholder="Search items" />
+          </div>
+        </div>
+        <div class="search-keyword">
+          <div class="search-keyword__title">
+            <span>HOT</span>
+            <i class="fa-solid fa-circle-exclamation"></i>
+          </div>
+          <div class="search-keyword__keyword">
+            <span>stationery</span>
+            <span>board</span>
+            <span>movie</span>
+            <span>gift</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="best-category">
+        <div class="best-category__text">
+          <span class="best-category__title">Best Category</span>
+        </div>
+        <div class="best-category__list">
+          <div class="best-category__list--name">
+            <span>Gift</span>
+            <img src="avatar.jpeg" />
+          </div>
+          <div class="best-category__list--name">
+            <span>Interior</span>
+            <img src="avatar.jpeg" />
+          </div>
+          <div class="best-category__list--name">
+            <span>Toy</span>
+            <img src="avatar.jpeg" />
+          </div>
+          <div class="best-category__list--name">
+            <span>Blueray</span>
+            <img src="avatar.jpeg" />
           </div>
         </div>
       </div>
@@ -147,6 +168,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big </span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/c4bc47d755.js"
