--- a/friends.html
+++ b/friends.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Friends-</title>
   </head>
-  <body>
+  <body id="friends-screen">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -82,6 +82,118 @@
             </div>
           </div>
         </div>
+        <div class="user-component__recommended-channel">
+          <div class="recommended-channel__column">
+            <img src="avatar.jpeg" />
+            <span class="recommended-channel__column--title">Souseuke</span>
+            <span class="recommended-channel__column--hashtags"
+              >#fantasy #adventure</span
+            >
+            <button>added channel</button>
+          </div>
+          <div class="recommended-channel__column">
+            <img src="avatar.jpeg" />
+            <span class="recommended-channel__column--title">Souseuke</span>
+            <span class="recommended-channel__column--hashtags"
+              >#fantasy #adventure</span
+            >
+            <button>added channel</button>
+          </div>
+          <div class="recommended-channel__column">
+            <img src="avatar.jpeg" />
+            <span class="recommended-channel__column--title">Souseuke</span>
+            <span class="recommended-channel__column--hashtags"
+              >#fantasy #adventure</span
+            >
+            <button>added channel</button>
+          </div>
+        </div>
+      </div>
+      <div class="friends-screen__channel friends-screen__friends">
+        <div class="freinds-screen__channel-header">
+          <span>Friends</span>
+          <i class="fa-solid fa-angle-up fa-xs"></i>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="avatar.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <h6 class="user-component__subtitle">this text whatever</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>1</span>
+              <i class="fa-solid fa-angle-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="avatar.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <h6 class="user-component__subtitle">this text whatever</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>2</span>
+              <i class="fa-solid fa-angle-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="avatar.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <h6 class="user-component__subtitle">this text whatever</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>3</span>
+              <i class="fa-solid fa-angle-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
+        <div class="user-component">
+          <div class="user-component__column">
+            <img
+              src="avatar.jpeg"
+              class="user-component__avatar user-component__avatar--sm"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title user-component__title--not-bold">
+                Channel
+              </h4>
+              <h6 class="user-component__subtitle">this text whatever</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+            <div>
+              <span>4</span>
+              <i class="fa-solid fa-angle-right fa-xs"></i>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
@@ -111,6 +223,10 @@
         </li>
       </ul>
     </nav>
+
+    <div id="no-mobile">
+      <span>Your screen is too big </span>
+    </div>
 
     <script
       src="https://kit.fontawesome.com/c4bc47d755.js"
