--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
       <a href="#">Find Kokoa Account or Password</a>
     </form>
 
+    <div id="splash-screen">
+      <i class="fa-solid fa-comment"></i>
+    </div>
+
+    <div id="no-mobile">
+      <span>Your screen is too big </span>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/c4bc47d755.js"
       crossorigin="anonymous"
