--- a/chat-information.html
+++ b/chat-information.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat Sousuke-</title>
+    <title>Chat Ponyo-</title>
   </head>
-  <body id="chat-screen">
+  <body id="chat-Noti">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">Sousuke</h1>
+        <h1 class="alt-header__title">Ponyo</h1>
       </div>
       <div class="alt-header__column">
         <span>
@@ -42,15 +42,40 @@
       </div>
     </header>
 
-    <main class="main-screen main-chat">
-      <div class="chat-timestamp">Tuseday, June 30, 2022</div>
+    <div class="chat-information">
+      <div class="chat-info-component">
+        <i class="fa-solid fa-bullhorn"></i>
+        <div class="chat-info-component__text">
+          <h4 class="chat-info-component__title">Notification</h4>
+          <h6 class="chat-info-component__subtitle">
+            Please check Notification
+          </h6>
+        </div>
+      </div>
+      <div class="chat-info-component__btn">
+        <div>Read</div>
+      </div>
+    </div>
 
+    <main class="main-screen Noti-chat">
       <div class="message-row">
         <img src="avatar.jpeg" />
         <div class="message-row__content">
-          <span class="message__author">Sousuke</span>
+          <span class="message__author">Ponyo</span>
           <div class="message__info">
-            <span class="message__bubble">Hi!</span>
+            <span class="message__bubble"
+              >You can talk to any Ghibli character you want.</span
+            >
+          </div>
+          <div class="message__info">
+            <span class="message__bubble"
+              >Talk to the Ghibli character with the famous lines in the movie.
+            </span>
+          </div>
+          <div class="message__info">
+            <span class="message__bubble"
+              >Please refer to the notice for details.</span
+            >
             <span class="message__time">21:27</span>
           </div>
         </div>
@@ -58,7 +83,7 @@
       <div class="message-row message-row--own">
         <div class="message-row__content">
           <div class="message__info">
-            <span class="message__bubble">Hi! Nice to meet you</span>
+            <span class="message__bubble">Ok. Thank you.</span>
             <span class="message__time">21:55</span>
           </div>
         </div>
