--- a/chats.html
+++ b/chats.html
@@ -50,22 +50,22 @@
             <h6 class="user-component__subtitle">Please check Info</h6>
           </div>
         </div>
-        <div class="user-component__column">
-          <button>Click</button>
-        </div>
+        <a href="chat-information.html">
+          <div class="user-component__column">
+            <button>Click</button>
+          </div>
+        </a>
       </div>
     </div>
 
     <main class="main-screen">
-      <a href="chat-screen.html">
+      <a href="ponyo-chat.html">
         <div class="user-component">
           <div class="user-component__column">
             <img src="avatar.jpeg" class="user-component__avatar" />
             <div class="user-component__text">
               <h4 class="user-component__title">Ponyo</h4>
-              <h6 class="user-component__subtitle">
-                Please check My Kokao Account Info
-              </h6>
+              <h6 class="user-component__subtitle">I'll protect you</h6>
             </div>
           </div>
           <div class="user-component__column">
@@ -74,29 +74,12 @@
           </div>
         </div>
       </a>
-      <a href="chat-screen.html">
+      <a href="kaonashi-chat.html">
         <div class="user-component">
           <div class="user-component__column">
             <img src="avatar.jpeg" class="user-component__avatar" />
             <div class="user-component__text">
               <h4 class="user-component__title">Kaonashi</h4>
-              <h6 class="user-component__subtitle">
-                Please check My Kokao Account Info
-              </h6>
-            </div>
-          </div>
-          <div class="user-component__column">
-            <span class="user-component__time">05:31</span>
-            <div class="badge">1</div>
-          </div>
-        </div>
-      </a>
-      <a href="chat-screen.html">
-        <div class="user-component">
-          <div class="user-component__column">
-            <img src="avatar.jpeg" class="user-component__avatar" />
-            <div class="user-component__text">
-              <h4 class="user-component__title">Kiki</h4>
               <h6 class="user-component__subtitle">
                 Please check My Kokao Account Info
               </h6>
