--- a/find.html
+++ b/find.html
@@ -71,7 +71,7 @@
           </div>
           <div class="open-post__column">
             <div class="open-post__photo">
-              <img src="avatar.jpeg" />
+              <img src="images/museum.jpeg" />
               <div class="open-post__heart-count heart">
                 <i class="fa-solid fa-heart fa-xs"></i>
                 <span>326</span>
@@ -91,29 +91,6 @@
           <span>Recent Order</span>
           <div class="divider"></div>
           <span>Cart</span>
-        </div>
-      </div>
-
-      <div class="shopping-search">
-        <div class="search-component">
-          <div class="search-component__icon">
-            <i class="fa-solid fa-magnifying-glass fa-lg"></i>
-          </div>
-          <div class="search-component__box">
-            <input type="text" placeholder="Search items" />
-          </div>
-        </div>
-        <div class="search-keyword">
-          <div class="search-keyword__title">
-            <span>HOT</span>
-            <i class="fa-solid fa-circle-exclamation"></i>
-          </div>
-          <div class="search-keyword__keyword">
-            <span>stationery</span>
-            <span>board</span>
-            <span>movie</span>
-            <span>gift</span>
-          </div>
         </div>
       </div>
 
