--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <header class="welcome-header">
-      <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
+      <h1 class="welcome-header__title">Welcome to Ghibli World</h1>
       <p class="welcome-header__text">
         If you have a Kokoa Account,<br />log in with your email or phone
         number.
@@ -40,7 +40,7 @@
     </form>
 
     <div id="splash-screen">
-      <i class="fa-solid fa-comment"></i>
+      <img src="images/ghibli.png" />
     </div>
 
     <div id="no-mobile">
