--- a/more.html
+++ b/more.html
@@ -60,31 +60,26 @@
           <i class="fa-solid fa-bars fa-2x"></i>
         </div>
       </div>
-      <div class="more-icons">
-        <div class="more-icons__icon">
-          <i class="fa-solid fa-calendar-check"></i>
-          <span>Calender</span>
+      <div class="shopping-search">
+        <div class="search-component">
+          <div class="search-component__icon">
+            <i class="fa-solid fa-magnifying-glass fa-lg"></i>
+          </div>
+          <div class="search-component__box">
+            <input type="text" placeholder="Please enter the content." />
+          </div>
         </div>
-        <div class="more-icons__icon">
-          <i class="fa-solid fa-box-archive"></i>
-          <span>Talk Drive</span>
-        </div>
-        <div class="more-icons__icon">
-          <i class="fa-solid fa-face-grin-squint"></i>
-          <span>Emoticons</span>
-        </div>
-        <div class="more-icons__icon">
-          <i class="fa-solid fa-brush"></i>
-          <span>Themes</span>
-        </div>
-        <div class="more-icons__icon">
-          <i class="fa-solid fa-money-check"></i>
-          <span>Account</span>
-        </div>
-        <div class="more-icons__icon">
-          <div class="more-icons__dot dot"></div>
-          <i class="fa-solid fa-comments"></i>
-          <span>Openchat</span>
+        <div class="search-keyword">
+          <div class="search-keyword__title">
+            <span>HOT</span>
+            <i class="fa-solid fa-circle-exclamation"></i>
+          </div>
+          <div class="search-keyword__keyword">
+            <span>stationery</span>
+            <span>board</span>
+            <span>movie</span>
+            <span>gift</span>
+          </div>
         </div>
       </div>
 
@@ -98,27 +93,27 @@
         </div>
         <div class="suggestions__icons">
           <div class="suggestions__icons--icon">
-            <img src="avatar.jpeg" />
+            <img src="images/ponyo-poster.jpeg" />
             <span>Ponyo on the Cliff by the Sea</span>
           </div>
           <div class="suggestions__icons--icon">
-            <img src="avatar.jpeg" />
+            <img src="images/ponyo-poster.jpeg" />
             <span>Kiki's Delivery Service</span>
           </div>
           <div class="suggestions__icons--icon">
-            <img src="avatar.jpeg" />
+            <img src="images/ponyo-poster.jpeg" />
             <span>My Neighbor Totoro</span>
           </div>
           <div class="suggestions__icons--icon">
-            <img src="avatar.jpeg" />
+            <img src="images/ponyo-poster.jpeg" />
             <span>Howl's Moving Castle</span>
           </div>
           <div class="suggestions__icons--icon">
-            <img src="avatar.jpeg" />
+            <img src="images/ponyo-poster.jpeg" />
             <span>Spirited Away</span>
           </div>
           <div class="suggestions__icons--icon">
-            <img src="avatar.jpeg" />
+            <img src="images/ponyo-poster.jpeg" />
             <span>Princess Mononoke</span>
           </div>
         </div>
