--- a/settings.html
+++ b/settings.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Settings-</title>
   </head>
-  <body>
+  <body id="settings-screen">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -37,7 +37,7 @@
       </div>
     </header>
 
-    <main class="main-screen">
+    <main class="main-screen settings-display">
       <ul class="settings-list main-list">
         <li class="settings__setting">
           <div class="settings__setting-column">
@@ -49,7 +49,7 @@
         <li class="settings__setting">
           <div class="settings__setting-column">
             <i class="fa-solid fa-flask"></i>
-            <span>Kakao Lab</span>
+            <span>Lab</span>
           </div>
           <div class="settings__setting-column"></div>
         </li>
@@ -65,50 +65,50 @@
         <li class="settings__setting"></li>
         <li class="settings__setting">
           <div class="settings__setting-column">
-            <i class="fa-solid fa-circle-exclamation"></i>
-            <span>Version</span>
+            <i class="fa-solid fa-lock"></i>
+            <span>Privacy</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-user-group"></i>
+            <span>Friends</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-comment-dots"></i>
+            <span>Chats</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-display"></i>
+            <span>Display</span>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting-column">
+            <i class="fa-solid fa-brush"></i>
+            <span>Themes</span>
           </div>
           <div class="settings__setting-column"></div>
         </li>
         <li class="settings__setting">
           <div class="settings__setting-column">
             <i class="fa-solid fa-circle-exclamation"></i>
-            <span>Version</span>
+            <span>Advanced Features</span>
           </div>
           <div class="settings__setting-column"></div>
         </li>
         <li class="settings__setting">
           <div class="settings__setting-column">
-            <i class="fa-solid fa-circle-exclamation"></i>
-            <span>Version</span>
-          </div>
-          <div class="settings__setting-column"></div>
-        </li>
-        <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-circle-exclamation"></i>
-            <span>Version</span>
-          </div>
-          <div class="settings__setting-column"></div>
-        </li>
-        <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-circle-exclamation"></i>
-            <span>Version</span>
-          </div>
-          <div class="settings__setting-column"></div>
-        </li>
-        <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-circle-exclamation"></i>
-            <span>Version</span>
-          </div>
-          <div class="settings__setting-column"></div>
-        </li>
-        <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-circle-exclamation"></i>
-            <span>Version</span>
+            <i class="fa-solid fa-ellipsis"></i>
+            <span>Support</span>
             <!--
             <div class="new-badge">
               <span>N</span>
@@ -119,6 +119,14 @@
         </li>
       </ul>
     </main>
+
+    <footer class="logout">
+      <a href="index.html">
+        <div class="logout-btn">
+          <span>Log out</span>
+        </div>
+      </a>
+    </footer>
 
     <nav class="nav">
       <ul class="nav__list">
