--- a/chat-information.html
+++ b/chat-information.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chat Ponyo-</title>
+    <title>Chat Noti-</title>
   </head>
   <body id="chat-Noti">
     <div class="status-bar">
@@ -30,7 +30,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">Ponyo</h1>
+        <h1 class="alt-header__title">Information</h1>
       </div>
       <div class="alt-header__column">
         <span>
