--- a/chats.html
+++ b/chats.html
@@ -44,7 +44,10 @@
     <div class="main-screen">
       <div class="user-component info-component">
         <div class="user-component__column">
-          <img src="avatar.jpeg" class="user-component__avatar" />
+          <img
+            src="images/ch.png"
+            class="user-component__avatar user-component__avatar--ch"
+          />
           <div class="user-component__text">
             <h4 class="user-component__title">Information</h4>
             <h6 class="user-component__subtitle">Please check Info</h6>
@@ -62,7 +65,10 @@
       <a href="ponyo-chat.html">
         <div class="user-component">
           <div class="user-component__column">
-            <img src="avatar.jpeg" class="user-component__avatar" />
+            <img
+              src="images/ponyo2.png"
+              class="user-component__avatar user-component__avatar--ponyo"
+            />
             <div class="user-component__text">
               <h4 class="user-component__title">Ponyo</h4>
               <h6 class="user-component__subtitle">I'll protect you</h6>
@@ -77,16 +83,19 @@
       <a href="kaonashi-chat.html">
         <div class="user-component">
           <div class="user-component__column">
-            <img src="avatar.jpeg" class="user-component__avatar" />
+            <img
+              src="images/kaonashi2.png"
+              class="user-component__avatar user-component__avatar--noface"
+            />
             <div class="user-component__text">
               <h4 class="user-component__title">Kaonashi</h4>
               <h6 class="user-component__subtitle">
-                Please check My Kokao Account Info
+                No... no... I'm lonely... I'm lonely.
               </h6>
             </div>
           </div>
           <div class="user-component__column">
-            <span class="user-component__time">05:31</span>
+            <span class="user-component__time">19:11</span>
             <div class="badge">1</div>
           </div>
         </div>
