--- a/find.html
+++ b/find.html
@@ -74,7 +74,7 @@
               <img src="images/museum.jpeg" />
               <div class="open-post__heart-count heart">
                 <i class="fa-solid fa-heart fa-xs"></i>
-                <span>326</span>
+                <span>531</span>
               </div>
             </div>
           </div>
@@ -83,8 +83,8 @@
 
       <div class="user-shopping">
         <div class="user-shopping__list">
-          <img src="avatar.jpeg" />
-          <span>Dust's shopping</span>
+          <img src="images/dust2.png" />
+          <span>Makkuro Kurosuke's shopping</span>
           <i class="fa-solid fa-angle-right fa-xs"></i>
         </div>
         <div class="user-shopping__text">
@@ -100,20 +100,20 @@
         </div>
         <div class="best-category__list">
           <div class="best-category__list--name">
-            <span>Gift</span>
-            <img src="avatar.jpeg" />
+            <span>Snack</span>
+            <img src="images/food.jpeg" />
           </div>
           <div class="best-category__list--name">
-            <span>Interior</span>
-            <img src="avatar.jpeg" />
+            <span>Living</span>
+            <img src="images/living.jpeg" />
           </div>
           <div class="best-category__list--name">
             <span>Toy</span>
-            <img src="avatar.jpeg" />
+            <img src="images/toy.png" />
           </div>
           <div class="best-category__list--name">
-            <span>Blueray</span>
-            <img src="avatar.jpeg" />
+            <span>Poster</span>
+            <img src="images/poster.jpeg" />
           </div>
         </div>
       </div>
