--- a/friends.html
+++ b/friends.html
@@ -48,11 +48,11 @@
       <div class="user-component">
         <div class="user-component__column">
           <img
-            src="avatar.jpeg"
+            src="images/dust2.png"
             class="user-component__avatar user-component__avatar--xl"
           />
           <div class="user-component__text">
-            <h4 class="user-component__title">Ponyo</h4>
+            <h4 class="user-component__title">Makkuro Kurosuke</h4>
             <!-- <h6 class="user-component__subtitle">this text whatever</h6> -->
           </div>
         </div>
@@ -66,8 +66,8 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="avatar.jpeg"
-              class="user-component__avatar user-component__avatar--sm"
+              src="images/ch.png"
+              class="user-component__avatar user-component__avatar--sm user-component__avatar--ch"
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
@@ -77,31 +77,33 @@
           </div>
           <div class="user-component__column">
             <div>
-              <span>2</span>
+              <span>10</span>
               <i class="fa-solid fa-angle-right fa-xs"></i>
             </div>
           </div>
         </div>
         <div class="user-component__recommended-channel">
           <div class="recommended-channel__column">
-            <img src="avatar.jpeg" />
-            <span class="recommended-channel__column--title">Souseuke</span>
+            <img src="images/jiji.png" />
+            <span class="recommended-channel__column--title"
+              >Kiki and Jiji</span
+            >
             <span class="recommended-channel__column--hashtags"
               >#fantasy #adventure</span
             >
             <button>added channel</button>
           </div>
           <div class="recommended-channel__column">
-            <img src="avatar.jpeg" />
-            <span class="recommended-channel__column--title">Souseuke</span>
+            <img src="images/mono.png" />
+            <span class="recommended-channel__column--title">Chibi Totoro</span>
             <span class="recommended-channel__column--hashtags"
               >#fantasy #adventure</span
             >
             <button>added channel</button>
           </div>
           <div class="recommended-channel__column">
-            <img src="avatar.jpeg" />
-            <span class="recommended-channel__column--title">Souseuke</span>
+            <img src="images/fire.png" />
+            <span class="recommended-channel__column--title">Calcifer</span>
             <span class="recommended-channel__column--hashtags"
               >#fantasy #adventure</span
             >
@@ -117,81 +119,71 @@
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="avatar.jpeg"
-              class="user-component__avatar user-component__avatar--sm"
+              src="images/ponyo2.png"
+              class="user-component__avatar user-component__avatar--sm user-component__avatar--ponyo"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title user-component__title--not-bold">
-                Channel
-              </h4>
-              <h6 class="user-component__subtitle">this text whatever</h6>
+              <h4 class="user-component__title">Ponyo</h4>
+              <h6 class="user-component__subtitle">
+                Ponyo, Ponyo, Ponyo, magic set you free
+              </h6>
             </div>
           </div>
           <div class="user-component__column">
-            <div>
-              <span>1</span>
-              <i class="fa-solid fa-angle-right fa-xs"></i>
-            </div>
+            <div></div>
           </div>
         </div>
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="avatar.jpeg"
-              class="user-component__avatar user-component__avatar--sm"
+              src="images/totoro-av.png"
+              class="user-component__avatar user-component__avatar--sm user-component__avatar--totoro"
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
-                Channel
+                Totoro
               </h4>
-              <h6 class="user-component__subtitle">this text whatever</h6>
+              <h6 class="user-component__subtitle">
+                My Neighbor Totoro Totoro Totoro
+              </h6>
             </div>
           </div>
           <div class="user-component__column">
-            <div>
-              <span>2</span>
-              <i class="fa-solid fa-angle-right fa-xs"></i>
-            </div>
+            <div></div>
           </div>
         </div>
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="avatar.jpeg"
-              class="user-component__avatar user-component__avatar--sm"
+              src="images/kaonashi2.png"
+              class="user-component__avatar user-component__avatar--sm user-component__avatar--noface"
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
-                Channel
+                Kaonashi
               </h4>
-              <h6 class="user-component__subtitle">this text whatever</h6>
+              <h6 class="user-component__subtitle">Ah.....Ah.....</h6>
             </div>
           </div>
           <div class="user-component__column">
-            <div>
-              <span>3</span>
-              <i class="fa-solid fa-angle-right fa-xs"></i>
-            </div>
+            <div></div>
           </div>
         </div>
         <div class="user-component">
           <div class="user-component__column">
             <img
-              src="avatar.jpeg"
-              class="user-component__avatar user-component__avatar--sm"
+              src="images/baron.png"
+              class="user-component__avatar user-component__avatar--sm user-component__avatar--baron"
             />
             <div class="user-component__text">
               <h4 class="user-component__title user-component__title--not-bold">
-                Channel
+                Baron
               </h4>
-              <h6 class="user-component__subtitle">this text whatever</h6>
+              <h6 class="user-component__subtitle">You need to be yourself</h6>
             </div>
           </div>
           <div class="user-component__column">
-            <div>
-              <span>4</span>
-              <i class="fa-solid fa-angle-right fa-xs"></i>
-            </div>
+            <div></div>
           </div>
         </div>
       </div>
