--- a/ponyo-chat.html
+++ b/ponyo-chat.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat Ponyo-</title>
   </head>
-  <body id="chat-screen">
+  <body id="ponyo-chat-screen">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -46,7 +46,7 @@
       <div class="chat-timestamp">Tuseday, June 30, 2022</div>
 
       <div class="message-row">
-        <img src="avatar.jpeg" />
+        <img src="images/ponyo2.png" />
         <div class="message-row__content">
           <span class="message__author">Ponyo</span>
           <div class="message__info">
