--- a/settings.html
+++ b/settings.html
@@ -40,80 +40,116 @@
     <main class="main-screen settings-display">
       <ul class="settings-list main-list">
         <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-bullhorn"></i>
-            <span>Notices</span>
+          <div class="settings__setting__div">
+            <div class="settings__setting-column">
+              <i class="fa-solid fa-bullhorn"></i>
+            </div>
+            <div class="settings__setting-column">
+              <span>Notices</span>
+            </div>
           </div>
           <div class="settings__setting-column"></div>
         </li>
         <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-flask"></i>
-            <span>Lab</span>
+          <div class="settings__setting__div">
+            <div class="settings__setting-column">
+              <i class="fa-solid fa-flask"></i>
+            </div>
+            <div class="settings__setting-column">
+              <span>Lab</span>
+            </div>
           </div>
           <div class="settings__setting-column"></div>
         </li>
         <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-circle-exclamation"></i>
-            <span>Version</span>
+          <div class="settings__setting__div">
+            <div class="settings__setting-column">
+              <i class="fa-solid fa-circle-exclamation"></i>
+            </div>
+            <div class="settings__setting-column">
+              <span>Version</span>
+            </div>
           </div>
-          <div class="settings__setting-column">Latest Version</div>
+          <div class="settings__setting-column version">Latest Version</div>
         </li>
       </ul>
+
       <ul class="settings-list sub-list">
         <li class="settings__setting"></li>
         <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-lock"></i>
-            <span>Privacy</span>
-          </div>
-          <div class="settings__setting-column"></div>
-        </li>
-        <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-user-group"></i>
-            <span>Friends</span>
-          </div>
-          <div class="settings__setting-column"></div>
-        </li>
-        <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-comment-dots"></i>
-            <span>Chats</span>
-          </div>
-          <div class="settings__setting-column"></div>
-        </li>
-        <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-display"></i>
-            <span>Display</span>
-          </div>
-          <div class="settings__setting-column"></div>
-        </li>
-        <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-brush"></i>
-            <span>Themes</span>
-          </div>
-          <div class="settings__setting-column"></div>
-        </li>
-        <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-circle-exclamation"></i>
-            <span>Advanced Features</span>
-          </div>
-          <div class="settings__setting-column"></div>
-        </li>
-        <li class="settings__setting">
-          <div class="settings__setting-column">
-            <i class="fa-solid fa-ellipsis"></i>
-            <span>Support</span>
-            <!--
-            <div class="new-badge">
-              <span>N</span>
+          <div class="settings__setting__div">
+            <div class="settings__setting-column">
+              <i class="fa-solid fa-lock"></i>
             </div>
-            -->
+            <div class="settings__setting-column">
+              <span>Privacy</span>
+            </div>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting__div">
+            <div class="settings__setting-column">
+              <i class="fa-solid fa-user-group"></i>
+            </div>
+            <div class="settings__setting-column">
+              <span>Friends</span>
+            </div>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting__div">
+            <div class="settings__setting-column">
+              <i class="fa-solid fa-comment-dots"></i>
+            </div>
+            <div class="settings__setting-column">
+              <span>Chats</span>
+            </div>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting__div">
+            <div class="settings__setting-column">
+              <i class="fa-solid fa-display"></i>
+            </div>
+            <div class="settings__setting-column">
+              <span>Display</span>
+            </div>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting__div">
+            <div class="settings__setting-column">
+              <i class="fa-solid fa-brush"></i>
+            </div>
+            <div class="settings__setting-column">
+              <span>Themes</span>
+            </div>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting__div">
+            <div class="settings__setting-column">
+              <i class="fa-solid fa-circle-exclamation"></i>
+            </div>
+            <div class="settings__setting-column">
+              <span>Advanced Features</span>
+            </div>
+          </div>
+          <div class="settings__setting-column"></div>
+        </li>
+        <li class="settings__setting">
+          <div class="settings__setting__div">
+            <div class="settings__setting-column">
+              <i class="fa-solid fa-ellipsis"></i>
+            </div>
+            <div class="settings__setting-column">
+              <span>Support</span>
+            </div>
           </div>
           <div class="settings__setting-column"></div>
         </li>
