--- a/index.html
+++ b/index.html
@@ -24,19 +24,24 @@
     </div>
 
     <header class="welcome-header">
+      <img src="images/ghibli3.png" />
       <h1 class="welcome-header__title">Welcome to Ghibli World</h1>
-      <p class="welcome-header__text">
-        If you have a Kokoa Account,<br />log in with your email or phone
-        number.
-      </p>
     </header>
 
     <form action="friends.html" method="get" id="login-form">
-      <input name="username" type="text" placeholder="Email or phone number" />
-      <input name="password" type="password" placeholder="Password" />
+      <input
+        name="username"
+        type="text"
+        required
+        placeholder="Email or phone number"
+      />
+      <input name="password" type="password" required placeholder="Password" />
       <input type="submit" value="Log In" />
       <input type="submit" value="Sign Up" />
-      <a href="#">Find Kokoa Account or Password</a>
+      <a href="#">
+        Find <span class="login-form__link">Ghibli World</span> Account or
+        Password
+      </a>
     </form>
 
     <div id="splash-screen">
