--- a/kaonashi-chat.html
+++ b/kaonashi-chat.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat Kaonashi-</title>
   </head>
-  <body id="chat-screen">
+  <body id="kaonashi-chat">
     <div class="status-bar">
       <div class="status-bar__column">
         <span>No Service</span>
@@ -46,7 +46,7 @@
       <div class="chat-timestamp">Sunday, May 31, 2022</div>
 
       <div class="message-row">
-        <img src="avatar.jpeg" />
+        <img src="images/kaonashi2.png" />
         <div class="message-row__content">
           <span class="message__author">Kaonashi</span>
           <div class="message__info">
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="message-row">
-        <img src="avatar.jpeg" />
+        <img src="images/kaonashi2.png" />
         <div class="message-row__content">
           <span class="message__author">Kaonasi</span>
           <div class="message__info">
