--- a/more.html
+++ b/more.html
@@ -42,12 +42,13 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
+      <div class="user-component user-component__contents">
         <div class="user-component__column">
           <img
-            src="avatar.jpeg"
+            src="images/dust2.png"
             class="user-component__avatar user-component__avatar--xl"
           />
+
           <div class="user-component__text">
             <h4 class="user-component__title">Ponyo</h4>
             <h6 class="user-component__subtitle">
@@ -75,10 +76,10 @@
             <i class="fa-solid fa-circle-exclamation"></i>
           </div>
           <div class="search-keyword__keyword">
-            <span>stationery</span>
-            <span>board</span>
-            <span>movie</span>
-            <span>gift</span>
+            <span>drama</span>
+            <span>adventure</span>
+            <span>fantasy</span>
+            <span>action</span>
           </div>
         </div>
       </div>
@@ -97,23 +98,23 @@
             <span>Ponyo on the Cliff by the Sea</span>
           </div>
           <div class="suggestions__icons--icon">
-            <img src="images/ponyo-poster.jpeg" />
+            <img src="images/majo.jpeg" />
             <span>Kiki's Delivery Service</span>
           </div>
           <div class="suggestions__icons--icon">
-            <img src="images/ponyo-poster.jpeg" />
+            <img src="images/totoro.jpeg" />
             <span>My Neighbor Totoro</span>
           </div>
           <div class="suggestions__icons--icon">
-            <img src="images/ponyo-poster.jpeg" />
+            <img src="images/howl.jpeg" />
             <span>Howl's Moving Castle</span>
           </div>
           <div class="suggestions__icons--icon">
-            <img src="images/ponyo-poster.jpeg" />
+            <img src="images/chihiro.jpeg" />
             <span>Spirited Away</span>
           </div>
           <div class="suggestions__icons--icon">
-            <img src="images/ponyo-poster.jpeg" />
+            <img src="images/mononoke.jpeg" />
             <span>Princess Mononoke</span>
           </div>
         </div>
