Revised chat-Info screen

--- a/chat-information.html
+++ b/chat-information.html
@@ -59,9 +59,9 @@
 
     <main class="main-screen Noti-chat">
       <div class="message-row">
-        <img src="avatar.jpeg" />
+        <img src="images/ch.png" />
         <div class="message-row__content">
-          <span class="message__author">Ponyo</span>
+          <span class="message__author">Ghibli World</span>
           <div class="message__info">
             <span class="message__bubble"
               >You can talk to any Ghibli character you want.</span
