Deleted height value & Added main tag's marign-bottom
<main>와 <nav>태그 겹치는 현상으로 인해 main의 일부 요소가 잘림
(nav태그가 position:fixed 되어있어서 발생하는 문제점)
- 그 전 해결방법:
해당 page의 main태그에 맞게 height값을 설정해줌(ex height=100vh, 130vh)
-> 이렇게 하면 각 페이지마다 높이 값을 따로 설정해 줘야함

-최종 해결방법:
각 page main태그 height값 전부 삭제
main tag에 nav태그의 height값만큼 marign-bottom줌

--- a/chats.html
+++ b/chats.html
@@ -41,27 +41,27 @@
       </div>
     </header>
 
-    <div class="main-screen">
-      <div class="user-component info-component">
-        <div class="user-component__column">
-          <img
-            src="images/ch.png"
-            class="user-component__avatar user-component__avatar--ch"
-          />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Information</h4>
-            <h6 class="user-component__subtitle">Please check Info</h6>
-          </div>
-        </div>
-        <a href="chat-information.html">
-          <div class="user-component__column">
-            <button>Click</button>
-          </div>
-        </a>
-      </div>
-    </div>
-
     <main class="main-screen">
+      <section class="info-scection">
+        <div class="user-component info-component">
+          <div class="user-component__column">
+            <img
+              src="images/ch.png"
+              class="user-component__avatar user-component__avatar--ch"
+            />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Information</h4>
+              <h6 class="user-component__subtitle">Please check Info</h6>
+            </div>
+          </div>
+          <a href="chat-information.html">
+            <div class="user-component__column">
+              <button>Click</button>
+            </div>
+          </a>
+        </div>
+      </section>
+
       <a href="ponyo-chat.html">
         <div class="user-component">
           <div class="user-component__column">
@@ -128,11 +128,11 @@
         </li>
       </ul>
     </nav>
-
+    <!--
     <div id="no-mobile">
       <span>Your screen is too big </span>
     </div>
-
+-->
     <script
       src="https://kit.fontawesome.com/c4bc47d755.js"
       crossorigin="anonymous"
