--- a/settings.html
+++ b/settings.html
@@ -154,15 +154,15 @@
           <div class="settings__setting-column"></div>
         </li>
       </ul>
-    </main>
 
-    <footer class="logout">
-      <a href="index.html">
-        <div class="logout-btn">
-          <span>Log out</span>
-        </div>
-      </a>
-    </footer>
+      <div class="logout">
+        <a href="index.html">
+          <div class="logout-btn">
+            <span>Log out</span>
+          </div>
+        </a>
+      </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
